--- a/PrinterySystem/Views/Manager/OrderProcessing.cshtml
+++ b/PrinterySystem/Views/Manager/OrderProcessing.cshtml
@@ -219,7 +219,7 @@
                 success: function (result) {
                     debugger;
                     if (result != null)
-                        alert("删除成功！")
+                        alert(result)
                     location.reload()
                 }
             })
@@ -244,7 +244,7 @@
                 success: function (e) {
                     debugger;
                     if (e != null)
-                        alert("请求提交成功，请稍后查看订单状态！")
+                        alert(e)
                     location.reload()
                 }
 
