--- a/PrinterySystem/Views/Manager/PrintingInkStockManagement.cshtml
+++ b/PrinterySystem/Views/Manager/PrintingInkStockManagement.cshtml
@@ -268,7 +268,7 @@
                 success: function (result) {
                     debugger;
                     if (result != null)
-                        alert("删除成功！")
+                        alert(result)
                     location.reload()
                 }
             })
@@ -293,7 +293,7 @@
             success: function (result) {
                 debugger;
                 if (result != null)
-                     alert("修改成功！")
+                     alert(result)
                     location.reload()
             }
         })
@@ -320,7 +320,7 @@
                 success: function (e) {
                     debugger;
                     if (e != null)
-                        alert("添加成功！")
+                        alert(e)
                     location.reload()
                 }
 
@@ -356,7 +356,7 @@
                 success: function (e) {
                     debugger;
                     if (e != null)
-                        alert("添加成功！")
+                        alert(e)
                     location.reload()
                 }
 
