--- a/PrinterySystem/Views/Manager/ProductStockManagement.cshtml
+++ b/PrinterySystem/Views/Manager/ProductStockManagement.cshtml
@@ -283,7 +283,7 @@
                 success: function (e) {
                     debugger;
                     if (e != null)
-                        alert("添加成功！")
+                        alert(e)
                     location.reload()
                 }
 
@@ -306,7 +306,7 @@
                 success: function (result) {
                     debugger;
                     if (result != null)
-                        alert("删除成功！")
+                        alert(result)
                     location.reload()
                 }
             })
@@ -336,7 +336,7 @@
                 success: function (e) {
                     debugger;
                     if (e != null)
-                        alert("添加成功！")
+                        alert(e)
                     location.reload()
                 }
 
@@ -371,7 +371,7 @@
                 success: function (e) {
                     debugger;
                     if (e != null)
-                        alert("添加成功！")
+                        alert(e)
                     location.reload()
                 }
 
