--- a/PrinterySystem/Views/Person4Manager/EmployeeInfo.cshtml
+++ b/PrinterySystem/Views/Person4Manager/EmployeeInfo.cshtml
@@ -313,7 +313,7 @@
             success: function (e) {
                 debugger;
                 if (e != null)
-                    alert("添加成功！")
+                    alert(e)
                     location.reload()  
             }
 
@@ -351,7 +351,7 @@
             success: function (e) {
                 debugger;
                 if (e != null)
-                    alert("修改成功！")
+                    alert(e)
                     location.reload()
             }
 
@@ -373,7 +373,7 @@
             success: function (result) {
                 debugger;
                 if (result != null)
-                     alert("删除成功！")
+                     alert(e)
                     location.reload()
                 }
             })
