--- a/PrinterySystem/Views/Manager/OrderManagement.cshtml
+++ b/PrinterySystem/Views/Manager/OrderManagement.cshtml
@@ -395,7 +395,7 @@
             success: function (result) {
                 debugger;
                 if (result != null)
-                     alert("删除成功！")
+                     alert(result)
                     location.reload()
             }
         })
@@ -439,7 +439,7 @@
             success: function (e) {
                 debugger;
                 if (e != null)
-                    alert("修改成功！")
+                    alert(e)
                     location.reload()
             }
 
@@ -489,7 +489,7 @@
             success: function (e) {
                 debugger;
                 if (e != null)
-                    alert("添加成功！")
+                    alert(e)
                     location.reload()  
             }
 
