--- a/PrinterySystem/Views/Manager/PaperStockManagement.cshtml
+++ b/PrinterySystem/Views/Manager/PaperStockManagement.cshtml
@@ -274,7 +274,7 @@
                 success: function (e) {
                     debugger;
                     if (e != null)
-                        alert("添加成功！")
+                        alert(e)
                     location.reload()
                 }
 
@@ -310,7 +310,7 @@
                 success: function (e) {
                     debugger;
                     if (e != null)
-                        alert("添加成功！")
+                        alert(e)
                     location.reload()
                 }
 
@@ -336,7 +336,7 @@
             success: function (result) {
                 debugger;
                 if (result != null)
-                     alert("修改成功！")
+                     alert(result)
                     location.reload()
             }
         })
@@ -357,7 +357,7 @@
                 success: function (result) {
                     debugger;
                     if (result != null)
-                        alert("删除成功！")
+                        alert(result)
                     location.reload()
                 }
             })
