--- a/PrinterySystem/Views/Person4Manager/CustomerInfo.cshtml
+++ b/PrinterySystem/Views/Person4Manager/CustomerInfo.cshtml
@@ -249,7 +249,7 @@
                 success: function (e) {
                     debugger;
                     if (e != null)
-                        alert("添加成功！")
+                        alert(e)
                     location.reload()
                 }
 
@@ -283,7 +283,7 @@
                 success: function (e) {
                     debugger;
                     if (e != null)
-                        alert("修改成功！")
+                        alert(e)
                     location.reload()
                 }
 
@@ -305,7 +305,7 @@
                 success: function (result) {
                     debugger;
                     if (result != null)
-                        alert("删除成功！")
+                        alert(result)
                     location.reload()
                 }
             })
