--- a/PrinterySystem/Views/Person4Manager/MyInfo.cshtml
+++ b/PrinterySystem/Views/Person4Manager/MyInfo.cshtml
@@ -26,40 +26,47 @@
                     <span class="text-muted">Today</span>
                     <span class="badge badge-secondary badge-pill">今日提醒</span>
                 </h4>
-                <ul class="list-group mb-3">
-                    <li class="list-group-item d-flex justify-content-between lh-condensed">
-                        <div>
-                            <h6 class="my-0">今日新增订单</h6>
-                            <small class="text-muted">New</small>
-                        </div>
-                        <span class="text-muted">23231</span>
-                    </li>
-                    <li class="list-group-item d-flex justify-content-between lh-condensed">
-                        <div>
-                            <h6 class="my-0">待处理订单</h6>
-                            <small class="text-muted">Wait</small>
-                        </div>
-                        <span class="text-muted">1231</span>
-                    </li>
-                    <li class="list-group-item d-flex justify-content-between lh-condensed">
-                        <div>
-                            <h6 class="my-0">已处理订单</h6>
-                            <small class="text-muted">Done</small>
-                        </div>
-                        <span class="text-muted">1231</span>
-                    </li>
-                    <li class="list-group-item d-flex justify-content-between bg-light">
-                        <div class="text-success">
-                            <h6 class="my-0">您已处理订单</h6>
-                            <small class="text-muted">You have done</small>
-                        </div>
-                        <span class="text-success">123</span>
-                    </li>
-                    <li class="list-group-item d-flex justify-content-between">
-                        <span>Total (USD)</span>
-                        <strong>$20</strong>
-                    </li>
-                </ul>
+                @{
+                    var todayfoc = ViewBag.TodayFocus as Printery.Domain.ViewModel.TodayFocusViewModel;
+                    if (todayfoc != null)
+                    {
+                        <ul class="list-group mb-3">
+                            <li class="list-group-item d-flex justify-content-between lh-condensed">
+                                <div>
+                                    <h6 class="my-0">今日新增订单</h6>
+                                    <small class="text-muted">New</small>
+                                </div>
+                                <span class="text-muted">@todayfoc.TodayAddOrder</span>
+                            </li>
+                            <li class="list-group-item d-flex justify-content-between lh-condensed">
+                                <div>
+                                    <h6 class="my-0">待处理订单</h6>
+                                    <small class="text-muted">Wait</small>
+                                </div>
+                                <span class="text-muted">@todayfoc.TodayOrderWait</span>
+                            </li>
+                            <li class="list-group-item d-flex justify-content-between lh-condensed">
+                                <div>
+                                    <h6 class="my-0">已处理订单</h6>
+                                    <small class="text-muted">Done</small>
+                                </div>
+                                <span class="text-muted">@todayfoc.TodayHaveDone</span>
+                            </li>
+                            <li class="list-group-item d-flex justify-content-between bg-light">
+                                <div class="text-success">
+                                    <h6 class="my-0">您已处理订单</h6>
+                                    <small class="text-muted">You have done</small>
+                                </div>
+                                <span class="text-success">@todayfoc.YouHaveDone</span>
+                            </li>
+                            <li class="list-group-item d-flex justify-content-between">
+                                <span>Total</span>
+                                <strong>@todayfoc.YouHaveDone</strong>
+                            </li>
+                        </ul>
+                    }
+                }
+
 
                 <form class="card p-2">
                     <div class="input-group">
