--- a/PrinterySystem/Views/Shared/_LayoutSysManager.cshtml
+++ b/PrinterySystem/Views/Shared/_LayoutSysManager.cshtml
@@ -61,7 +61,7 @@
                 </button>
                 <div class="dropdown-menu">
                     <a class="dropdown-item" href="@Url.Action("MyInfo","Person4Manager")">个人信息</a>
-                    <a class="dropdown-item" href="#">修改密码</a>
+                    <a class="dropdown-item" href="@Url.Action("RecoverPassword","Account")">修改密码</a>
                     <a class="dropdown-item" href="@Url.Action("Login","Account")">退出</a>
                 </div>
             </div>
