--- a/PrinterySystem/Views/Account/RecoverPassword.cshtml
+++ b/PrinterySystem/Views/Account/RecoverPassword.cshtml
@@ -6,12 +6,94 @@
 
 <html>
 <head>
-    <meta name="viewport" content="width=device-width" />
-    <title></title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="~/Content/Dashboradasset/fonts/font-awesome.min.css">
+    <link rel="stylesheet" href="~/Content/Dashboradasset/css/all.css">
 </head>
 <body>
-    <div class="row">
-
+    <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+        <h1 class="display-4">密码修改</h1>
+        <p class="lead"></p>
     </div>
+    <hr />
+    <form class="form-signin" method="post" onsubmit="return isValid(this)">
+        <div class="row">
+            <div class="col">
+                <div class="alert alert-primary" role="alert">
+                    输入原始密码
+                </div>
+            </div>
+            <div class="col">
+                <input type="password" id="inputpwd" name="confirmpwd" class="form-control" placeholder="原始密码" required="required" autofocus="" style="margin-left:40px">
+            </div>
+            <div class="col">
+
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <div class="alert alert-primary" role="alert">
+                    输入新密码
+                </div>
+            </div>
+            <div class="col">
+                <label for="inputPassword" class="sr-only">输入新密码</label>
+                <input type="password" id="inputPassword" name="newpwd" class="form-control" placeholder="新密码" required="required" style="margin-left:40px">
+            </div>
+            <div class="col">
+
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <div class="alert alert-primary" role="alert">
+                    输入确认新密码
+                </div>
+            </div>
+            <div class="col">
+                <label for="inputPassword" class="sr-only">输入确认新密码</label>
+                <input type="password" id="inputPassword" name="renewpwd" class="form-control" placeholder="确认新密码" required="required" style="margin-left:40px">
+            </div>
+            <div class="col">
+
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+
+            </div>
+            <div class="col">
+                <button class="btn btn-lg btn-primary btn-block" type="submit" style="width:280px;margin-left:40px">确认修改</button>
+            </div>
+            <div class="col">
+
+            </div>
+        </div>
+    </form>
+    <script language="javascript">
+
+//用script在提交之前判断密码的正确性
+            function isValid(form)
+            {
+            if (((form.newpwd.value.length<3)||(form.newpwd.value.length>8))&&(form.newpwd.value!=""))
+                    {
+                     alert("密码必须是3-8位的字母或数字！");
+            return false;
+            }
+            else  if (form.newpwd.value!=form.renewpwd.value)
+            {
+                    alert("两次输入的密码不同！");
+            return false;
+            }
+            else  if (form.newpwd.value=="")
+            {
+                    alert("用户密码不能为空！");
+            return false;
+               }
+            else return true;
+            }
+    </script>
 </body>
 </html>
