--- a/PrinterySystem/Views/Person4Manager/MyInfoEdit.cshtml
+++ b/PrinterySystem/Views/Person4Manager/MyInfoEdit.cshtml
@@ -4,7 +4,7 @@
 }
 @model Printery.Domain.ViewModel.EmployeeViewModel
 <!DOCTYPE html>
-<html lang="zh-Hant-TW">
+<html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
